[workspace]
members = [
  "crates/usque-config",
  "crates/usque-crypto",
  "crates/usque-cloudflare-api",
  "crates/usque-masque",
  "crates/usque-tunnel-core",
  "crates/usque-virtual-net",
  "crates/usque-proxy-http",
  "crates/usque-proxy-socks",
  "crates/usque-portfw",
  "crates/usque-tun-platform",
  "crates/usque-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/FireMasterK/usque-rs"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
boring = "4.22.0"
bytes = "1"
chrono = {version = "0.4", default-features = false, features = ["clock", "std"]}
clap = {version = "4", features = ["derive"]}
etherparse = "0.20"
fast-socks5 = "1"
futures = "0.3"
futures-util = "0.3"
h2 = "0.4"
hex = "0.4"
http = "1"
http-body-util = "0.1"
humantime = "2"
hyper = {version = "1", features = ["client", "http1", "http2", "server"]}
hyper-util = {version = "0.1", features = ["tokio"]}
libc = "0.2"
p256 = {version = "0.13", features = ["ecdsa", "pkcs8"]}
pem = "3"
pkcs8 = {version = "0.10", features = ["pem"]}
rand = "0.10"
rand_core = {version = "0.10", features = ["getrandom"]}
rcgen = {version = "0.14", features = ["pem", "crypto"]}
reqwest = {version = "0.13", default-features = false, features = ["json", "rustls-no-provider"]}
rtnetlink = "0.21"
rustls = {version = "0.23", default-features = false, features = ["ring", "std", "logging", "tls12"]}
rustls-pemfile = "2"
rustls-pki-types = "1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
smoltcp = {version = "0.13", default-features = false, features = [
  "std",
  "alloc",
  "medium-ip",
  "proto-ipv4",
  "proto-ipv6",
  "socket",
  "socket-tcp",
  "socket-udp",
]}
tempfile = "3"
thiserror = "2"
tokio = {version = "1", features = ["full"]}
tokio-quiche = "0.19"
tokio-rustls = {version = "0.26", default-features = false, features = ["ring", "logging", "tls12"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
tun = {version = "0.8", features = ["async"]}
usque-cloudflare-api = {path = "crates/usque-cloudflare-api"}
usque-config = {path = "crates/usque-config"}
usque-crypto = {path = "crates/usque-crypto"}
usque-masque = {path = "crates/usque-masque"}
usque-portfw = {path = "crates/usque-portfw"}
usque-proxy-http = {path = "crates/usque-proxy-http"}
usque-proxy-socks = {path = "crates/usque-proxy-socks"}
usque-tun-platform = {path = "crates/usque-tun-platform"}
usque-tunnel-core = {path = "crates/usque-tunnel-core"}
usque-virtual-net = {path = "crates/usque-virtual-net"}
x509-parser = "0.18"
