[package]
edition.workspace = true
license.workspace = true
name = "usque-crypto"
version.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
p256.workspace = true
pem.workspace = true
pkcs8.workspace = true
rand_core.workspace = true
rcgen.workspace = true
rustls-pemfile.workspace = true
rustls-pki-types.workspace = true
rustls.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
x509-parser.workspace = true
