[package]
name = "usque-masque"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
boring.workspace = true
bytes.workspace = true
etherparse.workspace = true
futures-util.workspace = true
h2.workspace = true
http.workspace = true
libc.workspace = true
p256.workspace = true
rustls.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-quiche.workspace = true
tokio-rustls.workspace = true
tracing.workspace = true
usque-crypto.workspace = true
