[package]
name = "usque-proxy-socks"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
fast-socks5.workspace = true
futures.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
usque-virtual-net.workspace = true
