[package]
name = "usque-tun-platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
usque-tunnel-core.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink.workspace = true
tun.workspace = true

[target.'cfg(windows)'.dependencies]
tun.workspace = true
