[package]
name = "usque-virtual-net"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
etherparse.workspace = true
futures.workspace = true
libc.workspace = true
rand.workspace = true
serde_json.workspace = true
smoltcp.workspace = true
tokio.workspace = true
tracing.workspace = true
usque-tunnel-core.workspace = true
